--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "bull": "^4.11.5",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "nodemailer": "^6.9.7",
     "winston": "^3.11.0",
     "xml2js": "^0.6.2"
