--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.7",
+    "secure-compare": "^3.0.1",
     "winston": "^3.11.0",
     "xml2js": "^0.6.2"
   },
