--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.7",
+    "raw-body": "^2.5.2",
     "secure-compare": "^3.0.1",
     "winston": "^3.11.0",
     "xml2js": "^0.6.2"
