--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.7",
     "raw-body": "^2.5.2",
