--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "mssql": "^10.0.1",
     "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.7",
+    "path": "^0.12.7",
     "raw-body": "^2.5.2",
     "secure-compare": "^3.0.1",
+    "shopify-api-node": "^3.12.7",
     "winston": "^3.11.0",
     "xml2js": "^0.6.2"
   },
