--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
+    "body-parser-xml": "^2.0.5",
     "bull": "^3.29.3",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-xml-bodyparser": "^0.3.0",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "mssql": "^10.0.1",
