--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shopify/shopify-api": "^9.0.1",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "body-parser-xml": "^2.0.5",
     "bull": "^3.29.3",
@@ -19,9 +21,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "express-xml-bodyparser": "^0.3.0",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^10.0.1",
     "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.7",
