--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mssql": "^10.0.1",
     "ngrok": "^5.0.0-beta.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
     "raw-body": "^2.5.2",
