--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@shopify/shopify-api": "^9.0.1",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "body-parser-xml": "^2.0.5",
     "bull": "^3.29.3",
     "child_process": "^1.0.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
     "express-xml-bodyparser": "^0.3.0",
     "fs": "^0.0.1-security",
@@ -28,12 +31,14 @@
     "jsonwebtoken": "^9.0.2",
     "mssql": "^10.0.1",
     "ngrok": "^5.0.0-beta.2",
+    "node-adodb": "^5.0.3",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.9",
     "path": "^0.12.7",
     "raw-body": "^2.5.2",
     "secure-compare": "^3.0.1",
     "shopify-api-node": "^3.12.7",
+    "tippy.js": "^6.3.7",
     "winston": "^3.11.0",
     "xml2js": "^0.6.2"
   },
