--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,11 @@ node_modules/
 
 # Archivos de registro y salida
 *.log
-
 *.xml
 *.txt
 *.xlsx
-
+*.py
+*.png
 # Dependiendo de tu entorno y configuración, puedes agregar más patrones según sea necesario.
 preentradas/
 
-*.py
