--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
     "express-xml-bodyparser": "^0.3.0",
+    "fast-csv": "^5.0.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
