--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ node_modules/
 *.png
 # Dependiendo de tu entorno y configuración, puedes agregar más patrones según sea necesario.
 preentradas/
+TTEAgencias/
 
